# HSE_CPP_Project

./: CMakeCache.txt  CMakeLists.txt  CartFilterModel.cpp  CartFilterModel.h  LogoWidget.cpp  LogoWidget.h  MainFilterModel.cpp  MainFilterModel.h  Makefile  WineShop  WineTable.cpp  WineTable.h  cart.csv  cartwindow.cpp  cartwindow.h  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h
WineShop_autogen/: moc_predefs.h  mocs_compilation.cpp
WineShop_autogen/EWIEGA46WW/: moc_CartFilterModel.cpp  moc_CartFilterModel.cpp.d  moc_LogoWidget.cpp  moc_LogoWidget.cpp.d  moc_MainFilterModel.cpp  moc_MainFilterModel.cpp.d  moc_WineTable.cpp  moc_WineTable.cpp.d  moc_cartwindow.cpp  moc_cartwindow.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
